# gitmate

./: README.md
backend/: .env.example  .gitignore  README.md  instructions.md  main.py  pyproject.toml  server.py
backend/gitmate/: config.py  llm.py  lsp_client.py  repo.py
frontend/: prisma.config.ts
frontend/app/dashboard/project/[id]/chart/: page.tsx
frontend/app/dashboard/project/[id]/chat/: page.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
