[project]
name = "backend"
version = "0.1.0"
description = "GitMate: An onboarding application for newbies to github codebase"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.45",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "faiss-cpu>=1.13.2",
    "rich>=14.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
]
